BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Clinical_Trial_Site_BMS__c.object
<CustomObject>
    <description>VPRO - November 2011 - BMS Oncology Requirements &amp; Design: Custom object to store information related to the sites at which BMS clinical trials take place.</description>
    <fields>
        <fullName>Address_BMS__c</fullName>
        <label>Address</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTP_Source_Country_BMS_CORE__c</fullName>
        <formula>Clinical_Trial_BMS__r.CTP_Source_Country_BMS_CORE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CTP_Source_Country_BMS_CORE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Centre_Name_BMS__c</fullName>
        <label>Centre Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_BMS__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clinical_Trial_BMS__c</fullName>
        <label>Clinical Trial</label>
        <referenceTo>Clinical_Trial_Protocol_BMS__c</referenceTo>
        <relationshipName>Clinical_Trial_Sites</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Country_BMS__c</fullName>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID_BMS__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Fax_BMS__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Forename_BMS__c</fullName>
        <label>Forename</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Investigator_Title_BMS__c</fullName>
        <label>Investigator Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code_BMS__c</fullName>
        <label>Postal Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Province_County_BMS__c</fullName>
        <label>Province County</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purpose_BMS__c</fullName>
        <label>Purpose</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Reference_BMS__c</fullName>
        <label>Site Reference</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Surname_BMS__c</fullName>
        <label>Surname</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telephone_BMS__c</fullName>
        <label>Telephone</label>
        <type>Phone</type>
    </fields>
    <label>Clinical Trial Site</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Clinical Trial Site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clinical Trial Sites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>